src/App.css
:root {
  --link-color: blueviolet;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
html {
  min-height: 100%;
}
body {
  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue",
    "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji",
    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-size: 16px;
  width: 100vw;
  overflow: hidden;
}
a {
  color: var(--link-color);
  text-decoration: none;
}
.App {
  display: flex;
  align-items: center;
  flex-direction: column;
}
.page {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}
.page h2 {
  margin: 1rem 0;
}
.list {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  list-style: none;
  margin: 2rem 0;
  margin-top: 1rem;
}
.li_item span {
  margin-right: 1.25rem;
}
.li_item a {
  display: inline-flex;
  gap: 0.25rem;
  align-items: center;
  text-decoration: none;
  font-weight: 600;
}
.prize {
  font-size: 2rem;
  text-align: center;
  padding: 2rem;
  border-radius: 0.8rem;
  font-weight: 600;
  margin-bottom: 1rem;
  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
}
.prize div {
  margin-bottom: 0.5rem;
  font-weight: initial;
}
.form {
  margin-top: 1rem;
  display: flex;
  gap: 0.5rem;
}

/* CSS */
.default_btn,
.default_input {
  background-color: #fff;
  border: 1px solid #d5d9d9;
  border-radius: 8px;
  box-shadow: rgba(213, 217, 217, 0.5) 0 2px 5px 0;
  box-sizing: border-box;
  color: #0f1111;
  cursor: pointer;
  display: inline-block;
  font-family: "Amazon Ember", sans-serif;
  font-size: 13px;
  line-height: 29px;
  padding: 0 10px 0 11px;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  vertical-align: middle;
  width: 100px;
}

.default_btn:hover,
.default_input:hover {
  background-color: #f7fafa;
}

.default_btn:focus,
.default_input:hover {
  border-color: #008296;
  box-shadow: rgba(213, 217, 217, 0.5) 0 2px 5px 0;
  outline: 0;
}

.default_input {
  width: initial;
}

